# deborah

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
run-tests/: .gitignore  gen-reference-outs.ps1  ludb-heuristic  run-tests-parallel.ps1  run-tests.ps1
scenarios/edge-cases/: nodes-should-be-aggregated-1-fixed.conf  nodes-should-be-aggregated-1-wrong.conf  nodes-should-be-aggregated-2-fixed.conf  nodes-should-be-aggregated-2-wrong.conf  one-flow-per-sd-pair-fixed.conf  one-flow-per-sd-pair-wrong.conf  readme.md
src/: deborah-core.cpp  deborah-core.h  deborah-main.cpp
src/lib/: curve.cpp  curve.h  deborah-globals.h  flow.cpp  flow.h  leakybucket.cpp  leakybucket.h  linearsegment.cpp  linearsegment.h  nestingtree.cpp  nestingtree.h  node.cpp  node.h  parametrizedleakybucket.cpp  parametrizedleakybucket.h  parametrizedpseudoaffine.cpp  parametrizedpseudoaffine.h  polynomial.cpp  polynomial.h  pseudoaffine.cpp  pseudoaffine.h  rng.cpp  rng.h  tandem.cpp  tandem.h  timing.h  tnode.cpp  tnode.h
src/lib/simplex/: constraint.cpp  constraint.h  objective.cpp  objective.h  simplex.cpp  simplex.h  solution.cpp  solution.h
src/unit-tests/: main.cpp  simplex.cpp  tandem.cpp
support-tools/: README.md  abs2rel.cpp  stat2b.cpp
